Fix for survey overflow

--- a/app/assets/stylesheets/jobs.css.scss
+++ b/app/assets/stylesheets/jobs.css.scss
@@ -631,6 +631,7 @@
 .job-status-no-wrap {
   white-space: nowrap;
   text-overflow: ellipsis;
+  text-wrap: none;
 }
 
 .job-status-no-border {
